# axumate

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
src/commands/: generate.rs  generate_item.rs  generate_module.rs  mod.rs  new.rs
src/commands/templates/: generate_item_templates.rs  generate_module_templates.rs  generate_templates.rs  mod.rs  new_templates.rs
src/utils/: common.rs  file.rs  mod.rs
tests/: commands_tests.rs
