[package]
name = "axumate"
version = "0.1.0"
edition = "2024"
authors = ["Mohammad Hossein Sadeghi <mh.sadeghi.dev@gmail.com>"]
description = "a powerful CLI for Axum framework inspired by NestJS CLI"
license = "MIT"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
