[package]
name = "axumate"
version = "0.1.0"                  # bump before every publish
edition = "2024"
description = "A CLI tool for Axum framework."
license = "MIT"
repository = "https://github.com/mohammad79sss/axumate"
homepage = "https://github.com/mohammad79sss/axumate"
documentation = "https://github.com/mohammad79sss/axumate"
keywords = ["cli", "axum", "tool"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
